[project]
name = "flight-booking-langgraph"
version = "0.1.0"
description = "Multi-turn flight booking agent built as a LangGraph state machine. Route intents, collect trip details, propose flight options, and confirm bookings - all through one FastAPI endpoint with checkpointed thread memory."
authors = [{ name = "Param Harrison", email = "param@learnwithparam.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "langgraph>=0.2.0",
]
